--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -49,7 +49,7 @@ a{
 
     nav ul li{
     display: block;
-    margin-right: 0px;
+    margin-right: 0;
     margin-top: 40px;
     padding: 12px 8px;
     cursor: pointer;
